{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Player_1",
            "id": "78cae1cd-4bec-4761-b486-f9cd415b6176",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "8ff84034-ee84-44f6-b440-188a4da80fd0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlaceBomb",
                    "type": "Button",
                    "id": "d1eb7e24-04ec-4c74-a6bf-968791767f1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "28857ba9-0428-4790-951c-3a049d21b636",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c9d7aa1f-74fc-4f3b-bebd-8bccbe422968",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cb43a478-adec-405c-9c50-7098b97fc7ee",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "dc1dccd2-32bb-4fb2-9489-3859e8ccf6f0",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7eaf3e75-89bc-49e9-a599-861b3858920f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3e3e9ac1-56bf-479c-bb92-7467a0227033",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}